fixed the overflow on the navBar on mobile, there's no transition though

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -10,7 +10,7 @@ body {
 }
 
 *, *::before, *::after {
-    box-sizing: inherit;
+    box-sizing: inherit; 
 }
 
 *{
@@ -43,6 +43,9 @@ nav{
     transition: .1s;   
 }
 
+.navBar-show ul li{
+    display: block;
+}
 .navBar ul li:hover{
     color: #fffafa;
 }
@@ -76,7 +79,8 @@ nav{
 }
 
 @media(max-width:700px){
-    nav{
+    html, body {
+        max-width: 100%;
         overflow-x: hidden;
     }
     .nav-media{
@@ -105,6 +109,7 @@ nav{
     }
 
     .navBar{
+        display: none;
         position: absolute;
         background: #000000;
         height: calc(100vh - 4rem);
@@ -112,7 +117,7 @@ nav{
         top:0;
         right: -270px;
         text-align: left;
-        z-index: 2;
+        z-index: 1;
         transition: .5s;
     }
     .navBar-show{
@@ -131,7 +136,6 @@ nav{
     .navBar-show li{
         display: block;
         margin: 1rem;
-
     }
     .navBar-show ul{
         display: block;
